# cushion-desktop

./: .env.example  .gitignore  OTA-UPDATES-PLAN.md  README.md  RELEASE-WORKFLOW.md  TAURI_PROJECT_SETUP.md  build-config.js  build-prod.sh  claude.md  create-dev-dmg.sh  generate-icons.sh  generate_icon.sh  notarize-dmg.sh  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml  version-bump.yml  version-check.yml
docs/: VERSION_BUMP.md
scripts/: sync-version.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.backup
src-tauri/capabilities/: default.json
src-tauri/icons/: dev-icon.icns  icon.icns
src-tauri/icons/icon.icon/: icon.json
src-tauri/src/: app_nap.rs  lib.rs  macos_notifications.rs  main.rs  theme.rs
src-tauri/src/commands/: download.rs  mod.rs  notification.rs  system.rs  updater.rs  window.rs
src-tauri/src/menu/: macos.rs  mod.rs
src-tauri/src/notifications/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/updater/: dialog.rs  mod.rs  scheduler.rs
src-tauri/src/window/: events.rs  mod.rs
